@@ -9,17 +9,17 @@ logfile=/var/log/hockeypuck/hockeypuck-mgo.log
 #
 # MongoDB connection
 #
-server="localhost"
+#server=localhost
 #
 # PKS server setup
 #
 ## PKS sync mail from: address
-#pks-from="pgp-public-keys@yourhost.yourdomain.com": 
+#pks-from=pgp-public-keys@yourhost.yourdomain.com
 ## Send keys to these PKS servers
-#pks-to="pgp-public-keys@other1.example.com,pgp-public-keys@other2.example.com"
+#pks-to=pgp-public-keys@other1.example.com,pgp-public-keys@other2.example.com
 ## SMTP hostname:port
-#smtp-host="smtp.gmail.com:587"
+#smtp-host=smtp.gmail.com:587
 ## SMTP account username, if necessary
-#smtp-user="hkp.account"
+#smtp-user=hkp.account
 ## SMTP account password
-#smtp-pass="changeme"
+#smtp-pass=changeme
